# fitness-tracker

./: .gitignore  README.md  com.luigi311.fitness-tracker.yaml  deps-only.txt  io.Luigi311.Fitness.yml  io.luigi311.fitness-tracker.yaml  main.py  pyproject.toml  python3-requirements.json  regenerate_flatpak_deps.sh  requirements-linux.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml
data/: com.luigi311.fitness-tracker.metainfo.xml  fitness-tracker.desktop  io.Luigi311.Fitness.desktop
fitness_tracker/: __main__.py  ble.py  database.py  hr_polar.py  hr_provider.py  main.py  recorder.py  ui.py  ui_history.py  ui_settings.py  ui_tracker.py
pebble/: package.json
pebble/src/c/: main.c
src/bleaksport/: __init__.py  core.py  cycling.py  discover.py  running.py
src/fitness_tracker/: activity_stats.py  database.py  exporters.py  hr_provider.py  main.py  recorder.py  ui.py  ui_free_run.py  ui_history.py  ui_mode.py  ui_settings.py  ui_tracker.py  ui_workout.py  workouts.py
src/fitness_tracker/upload_providers/: __init__.py  intervals_icu.py
src/fitness_tracker/workout_providers/: __init__.py  intervals_icu.py  utils.py
src/pebble_bridge/: __init__.py  pebble_bridge.py
tests/: test_parsers.py
tests/data/: 1_Speed_Workout_Bike.json
