[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-tracker"
version = "0.1.0"
description = "Polar H10 heart-rate tracker with GTK UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "bleakheart>=0.1.3",
    "matplotlib>=3.10.3",
    "psycopg2-binary>=2.9.10",
    "pygobject>=3.52.3",
    "sqlalchemy>=2.0.41",
]

# Enable setuptools to find your package modules
[tool.setuptools.packages.find]
where = ["."]
include = ["fitness_tracker*"]

# Define a console script entry point
[project.scripts]
fitness-tracker = "fitness_tracker.__main__:main"
